Cards alignment problem between 768px and 991px solved

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -143,9 +143,40 @@ footer {
     
 }
 
+@media screen and (max-width: 991px) {
+
+    #cards{
+        display: grid !important;
+        grid-template-columns: repeat(2, 1fr);
+        justify-items: stretch;
+    }
+
+    .card{
+        width: auto;
+    }
+
+    .details {
+        min-height: 74% !important;
+    }
+
+    .details-img {
+        width: 50%;
+        object-fit: cover;
+        height: 60vh
+    }
+
+    main {
+        min-height: 73vh !important;
+    }
+    
+    
+}
+
 @media screen and (max-width:768px) {
 
-
+    #cards{
+        display: flex !important;
+    }
     .details {
         min-height: auto !important;
     }
